--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "@NetflixDev/bt-ER-750x300",
   "version": "2.2.1",
-  "description":
-    "C20/Monet-compatible templates that use  https://github.com/ff0000-ad-tech/ad-docs/blob/master/README.md",
+  "description": "C20/Monet-compatible templates that use  https://github.com/ff0000-ad-tech/ad-docs/blob/master/README.md",
   "scripts": {
     "c20": "node lib/api.js --cmd track && node lib/api.js --cmd publish"
   },
@@ -30,16 +29,13 @@
   "genericSource": {
     "id": "ad1a03c0-715e-48db-b097-05593d8b5c36",
     "name": "bt-ER-750x300",
-    "description":
-      "C20/Monet-compatible templates that use  https://github.com/ff0000-ad-tech/ad-docs/blob/master/README.md",
+    "description": "C20/Monet-compatible templates that use  https://github.com/ff0000-ad-tech/ad-docs/blob/master/README.md",
     "type": "build_templates",
     "builder": {
-      "label": "750x300 NF Global Template",
       "tier": "endframe-resolve",
       "size": "750x300",
       "creative": "./dist/3-traffic/default/750x300",
-      "toolkit":
-        "./toolkit/750x300_NF_Global_Template_ContainerRecycle_Layered.psd",
+      "toolkit": "./toolkit/750x300_NF_Global_Template_ContainerRecycle_Layered.psd",
       "layouts": {
         "SIDE_BY_SIDE_LEFT": "Side-By-Side Left",
         "SIDE_BY_SIDE_OFF_CENTER_LEFT": "Side-By-Side Off-Center Left",
@@ -51,7 +47,7 @@
     },
     "context": "RED Interactive",
     "state": "published",
-    "updated": 1558653968748,
+    "updated": 1559154604596,
     "username": "GitHub",
     "full_name": "NetflixDev/bt-ER-750x300",
     "html_url": "https://github.com/NetflixDev/bt-ER-750x300",
